# hex-rs

./: .pre-commit-config.yaml  Cargo.toml  PKGBUILD  README.md
src/: main.rs  pretty.rs
