[package]
name = "hex-rs"
authors = ["fffzlfk <fffzlfk@qq.com>"]
version = "0.1.1"
edition = "2021"
description = "A simple command line hex viewer written in Rust."
homepage = "https://github.com/fffzlfk/hex-rs"
repository = "https://github.com/fffzlfk/hex-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
termion = "*"